add function to calculate profit/loss and display output

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <input id="current-price" type="text">
 
     <button id="submit-button">Tell Me</button>
-    <div id="output"></div>
+    <div id="output-box"></div>
 
     <script src="app.js"></script>
     
