style: add css componets

--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Profit Loss Calculator</h1>
-    <label for="initial-price">Initial Price:</label>
-    <input id="initial-price" type="text">
-    <label for="quantity">Quantity:</label>
-    <input id="quantity" type="text">
-    <label for="current-price">Current Price:</label>
-    <input id="current-price" type="text">
-
-    <button id="submit-button">Tell Me</button>
-    <div id="output-box"></div>
+    <h1><span style="color:lightgrey">Profit Loss</span> Calculator</h1>
+    <main class="container">
+        <label class="label" for="initial-price">Initial Price:</label><input class="input-box" id="initial-price" type="text">
+        <label class="label" for="quantity">Quantity:</label><input class="input-box" id="quantity" type="text">
+        <label class="label" for="current-price">Current Price:</label><input class="input-box" id="current-price" type="text">
+    
+        <button id="submit-button">Tell Me</button>
+        <div id="output-box"></div>
+    </main>
 
     <script src="app.js"></script>
     
