fix: check negative and empty input value

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <h1><span style="color:lightgrey">Profit Loss</span> Calculator</h1>
     <main class="container">
-        <label class="label" for="initial-price">Initial Price:</label><input class="input-box" id="initial-price" type="text">
-        <label class="label" for="quantity">Quantity:</label><input class="input-box" id="quantity" type="text">
-        <label class="label" for="current-price">Current Price:</label><input class="input-box" id="current-price" type="text">
+        <label class="label" for="initial-price">Initial Price:</label><input class="input-box" id="initial-price" type="number">
+        <label class="label" for="quantity">Quantity:</label><input class="input-box" id="quantity" type="number">
+        <label class="label" for="current-price">Current Price:</label><input class="input-box" id="current-price" type="number">
     
         <button id="submit-button">Tell Me</button>
         <div id="output-box"></div>
